X   X
    * Add auto-detecting entity IDs
    * Add option to block spawn eggs per-creature (enableSpawnEggOverrideAllowSpawn)
    * Add option to enable/disable mobs from appearing in SilkSpawners (enable)
    * Fix spawning stacks of spawn eggs with spawnEggOverride
    * Remove legacy IDs
    * Remove entity IDs and useExtraMobs from config (since now auto-detected)

2012-05-07  1.5
    * Add optional support for Spout and clicking item to show spawner type (thanks thedudeguy)
    * Add mob and Entity IDs from RanCraft Penguins 1.2.5f in config.yml

2012-04-11  1.4
    * Improve spawnEggOverride to spawn on clicked block instead of above player
    * Change craftableSpawners recipes to shaped, egg surrounded by iron bars (thanks xGh0sTkiLLeRx)
    * Add per-creature crafting recipe config options (enableCraftingSpawner)

2012-04-02  1.3
    * Add spawnEggOverride option to allow spawning _any_ entity using spawn eggs
      using spawn eggs, including dragons or non-living entities (dangerous, default off)
    * Add dumpEntityMap option to show entity ID mapping for debugging purposes
    * Add mob and entity IDs from AnimalBikes 1.11.0 in config.yml
    * Tested on 1.2.4-R1.0 and 1.2.3-R0.3

2012-03-21  1.2
    * Respect WorldGuard protection
    * Add spawnersUnstackable config option (default false) 
    * Add mob and entity IDs from RanCraft Penguins 1.1c in config.yml

2012-03-11  1.1a
    * Add ocelot and iron golem
    * Tested on 1.2.3-R0.2, 1.1-R8, and 1.1-R4

2012-03-03  1.1
    * Update for new API
    * Craftable spawners supported on: CraftBukkit 1.2.3-R0.1, 1.1-R7, 1.1-R4
     (not on 1.1-R6, due to BUKKIT-602)

2012-02-26  1.0.1
    * Fix NPE when using /ss to view type of non-standard spawners
    * Tested with CraftBukkit 1.1-R5 (1961 development build)
    
2012-02-26  1.0
    * Change default destroyDropEgg to false in config.yml
    * Change command to /silkspawners, add /spawner and /ss aliases
    * Preserve comments in config.yml